# BlurLyric-3.0

./: .gitignore  License  README.md  index.html  main.js  package-lock.json  package.json  vite.config.js
.github/workflows/: build-application.yaml  rust.yml
server/: api.js
src/: App.vue  main.js  style.css
src-tauri/: 2  Cargo.toml  music_dirs.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/methods/: mod.rs  webserver.rs
src-tauri/src/methods/libs/: config.rs  folder.rs  mod.rs
src-tauri/src/models/: mod.rs  music_info.rs
src/api/: manager.js  tauri.js
src/assets/: 60percent的日常.aac  tempMusicTrack.js
src/components/: album.vue  album_lazyLoad.vue  background.vue  gridRowAlbum.vue  iconFlexRow.vue  iconToClick.vue  iconWithText.vue  leftBar.vue  lyric-line-wordbyword.vue  lyric.vue  messageDisplay.vue  musicInfoPage.vue  oobe.vue  rightBlock.vue  scrollRow.vue  text_contextMenu.vue  toggle.vue  topBar.vue
src/components/base/: bodytitle.vue  buttom_icon_circleBackground.vue  contextMenu.vue  dialog.vue  hoverMenu.vue  lazyLoadCoverImage.vue  lazyLoadImage.vue  suspendingBox.vue  text-spawn.vue  toggle.vue
src/components/message/: manager.vue
src/components/musicInfoPageComponents/: background.vue  button_block.vue  button_circle.vue  contain.vue  landscape.vue  lyric.vue  playModeSvg.vue  portrait.vue
src/components/topBar/: title.vue
src/components/tracks/: folder.vue  (+7 more)
src/js/: base.js  baseMethods.js  drag.js  elemListener.js  loadTauri.js  lyricParser.js
src/router/: index.js
(+11 files in other folders)
