[package]
name = "BlurLyric"
version = "3.0.0"
description = "A Music Player With High-performance"
authors = ["you"]
license = ""
repository = ""
default-run = "BlurLyric"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
tauri = { version = "1.4.0", features = [ "window-start-dragging", "window-close", "window-maximize", "window-unminimize", "window-minimize", "window-hide", "window-unmaximize", "window-show"] }
window-vibrancy = "0.4.0"
tokio = { version = "1", features = ["full"] }
audiotags = "0.5.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
